refactor pool OOP_DZ3